--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,12 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Epilogue", sans-serif;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 5%;
+}/*# sourceMappingURL=main.css.map */
