--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 #team {
-  background-color: #3A3C56;
+  background-color: #28293E;
 }
 #team .container .team {
   width: 100%;
@@ -82,7 +82,7 @@ body {
 #team .container .team .team-person .card-team .card-image {
   text-align: center;
   width: 100%;
-  border: 1px solid #464868;
+  border: 1px solid #3A3C56;
   border-radius: 6px;
   display: flex;
   justify-content: center;
