--- a/assets/scss/pages/home/_secondsection.scss
+++ b/assets/scss/pages/home/_secondsection.scss
@@ -58,7 +58,7 @@
           .card-image {
             text-align: center;
             width: 100%;
-            border: 1px solid #464868;
+            border: 1px solid #3A3C56;
             border-radius: 6px;
             display: flex;
             justify-content: center;
