--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,6 +198,7 @@ body {
 
 @media only screen and (max-width: 992px) {
   .founderwords .container {
+    row-gap: 50px;
     flex-direction: column;
   }
   .founderwords .container .founderwordsleft #rendelanimg {
