--- a/assets/scss/pages/home/_secondsection.scss
+++ b/assets/scss/pages/home/_secondsection.scss
@@ -1,4 +1,3 @@
-
 #team {
   background-color: $bg-color;
   .container {
@@ -43,16 +42,15 @@
           align-items: center;
           .team-header {
             width: 100%;
-            
           }
           .head-circle {
             display: none;
           }
           .head-text {
-              h2 {
-                font-size: 40px;
-              }
+            h2 {
+              font-size: 40px;
             }
+          }
         }
       }
       .team-person {
@@ -65,7 +63,7 @@
           .card-image {
             text-align: center;
             width: 100%;
-            border: 1px solid #3A3C56;
+            border: 1px solid #3a3c56;
             border-radius: 6px;
             display: flex;
             justify-content: center;
