--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@ body {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 16px;
+  margin-top: 20px;
   margin: 0;
   padding-top: 50px;
   color: #EF6D58;
