--- a/assets/scss/pages/home/_secondsection.scss
+++ b/assets/scss/pages/home/_secondsection.scss
@@ -16,6 +16,7 @@
             text-transform: uppercase;
             font-weight: 400;
             font-size: 16px;
+            margin-top: 20px;
             margin: 0;
             padding-top: 50px;
             color: $text-color;
